[project]
name = "opper-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opperai>=1.1.2",
    "pydantic>=2.11.7",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "composio==0.8.0",
]
